--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
 # backendUrl= 'http://localhost:4000'
-VITE_BACKEND_URL=http://localhost:4000
+VITE_BACKEND_URL=https://text-to-image-generator-s-1.onrender.com
